# gba-template

./: Cargo.toml  Makefile.toml  linker.ld
.cargo/: config.toml
src/: lib.rs  main.rs  rsrt0.S
